Added docstrings, automatic html docs, changed output from some endpoints
